error word wrap useful fix

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -586,6 +586,7 @@ td pre {
 	margin: 5px;
 	padding: 0 15px;
 	/*list-style: none;*/
+	word-break: break-all;
 }
 
 .modal-bg {
